# CPPStudy

./: CMakeLists.txt  main.cpp  rest
Example/: Example.cpp  Example.h
KlausurSoSe20/Lagerware/: Lagerware.cpp  Lagerware.h
KlausurSoSe20/Restposten/: Restposten.cpp  Restposten.h
KlausurSoSe20/Ware/: Ware.cpp  Ware.h
KlausurWiSe20/: Geteilt.cpp  Geteilt.h  Knoten.h  Mal.cpp  Mal.h  Minus.cpp  Minus.h  Plus.cpp  Plus.h  Zahl.cpp  Zahl.h  knoten.cpp
Probeklausur23/: Probeklausur23.cpp
ProbeklausurSoSe20/: Buch.cpp  Buch.h  Fachbuch.cpp  Fachbuch.h  Seite.cpp  Seite.h
Punkt/: Punkt.cpp  Punkt.h
VerketteteListe/List/: List.cpp  List.h
VerketteteListe/Node/: Node2.cpp  Node2.h
Zeichenkette/: Text.cpp  Text.h  Zeichenkette.cpp
ifndef/: KlasseA.cpp  KlasseA.h  KlasseB.cpp  KlasseB.h
Übungen/: Ü_23_06_30.cpp
