cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled main.cpp Example/Example.h Example/Example.cpp Punkt/Punkt.cpp VerketteteListe/Node/Node2.h VerketteteListe/Node/Node2.cpp VerketteteListe/List/List.h VerketteteListe/List/List.cpp ifndef/KlasseA.h ifndef/KlasseA.cpp ifndef/KlasseB.h ifndef/KlasseB.cpp KlausurSoSe20/Ware/Ware.h KlausurSoSe20/Ware/Ware.cpp KlausurSoSe20/Lagerware/Lagerware.h KlausurSoSe20/Lagerware/Lagerware.cpp KlausurSoSe20/Restposten/Restposten.h KlausurSoSe20/Restposten/Restposten.cpp KlausurWiSe20/knoten.cpp KlausurWiSe20/Knoten.h KlausurWiSe20/Zahl.h KlausurWiSe20/Zahl.cpp KlausurWiSe20/Plus.h KlausurWiSe20/Plus.cpp KlausurWiSe20/Minus.h KlausurWiSe20/Mal.h KlausurWiSe20/Mal.cpp KlausurWiSe20/Geteilt.cpp KlausurWiSe20/Minus.cpp Probeklausur23/Probeklausur23.cpp ProbeklausurSoSe20/Seite.h ProbeklausurSoSe20/Seite.cpp ProbeklausurSoSe20/Buch.h ProbeklausurSoSe20/Buch.cpp ProbeklausurSoSe20/Fachbuch.h ProbeklausurSoSe20/Fachbuch.cpp Übungen/Ü_23_06_30.cpp)
